--- a/mypage.html
+++ b/mypage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>Find Someone</title>
+    <title>My Page</title>
     <link rel="stylesheet" href="css/mypage.css">
     <link rel="stylesheet" href="css/mediaquery.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" />
@@ -90,40 +90,170 @@
                 </div>
             </div>
             <div id="status">
-               <div id="textarea">
-                   <br><br>
-                <p>年齢: 40</p><br><br>
-                <p>性別: 男性</p><br><br>
-                <p>がんの種類: 大腸がん</p><br><br>
-                <p>地域: 東京</p><br><br>
-                <p>登録日: 2017年3月26日</p>
-               </div>
+                <div id="textarea">
+                    <br>
+                    <br>
+                    <p>年齢: 40</p>
+                    <br>
+                    <br>
+                    <p>性別: 男性</p>
+                    <br>
+                    <br>
+                    <p>がんの種類: 大腸がん</p>
+                    <br>
+                    <br>
+                    <p>地域: 東京</p>
+                    <br>
+                    <br>
+                    <p>登録日: 2017年3月26日</p>
+                </div>
             </div>
             <div id="columns">
                 <div class="column">
                     <h2>「これはサンプルタイトルです」</h2>
                     <p class="date">2017年3月26日17:00</p>
                     <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p><p class="comment">コメント: 3件</p>
+                    <p class="like">いいね: 20</p>
+                    <p class="comment">コメント: 3件</p>
                 </div>
                 <div class="column">
                     <h2>「これはサンプルタイトルです」</h2>
                     <p class="date">2017年3月26日17:00</p>
                     <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p><p class="comment">コメント: 3件</p>
+                    <p class="like">いいね: 20</p>
+                    <p class="comment">コメント: 3件</p>
                 </div>
                 <div class="column">
                     <h2>「これはサンプルタイトルです」</h2>
                     <p class="date">2017年3月26日17:00</p>
                     <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p><p class="comment">コメント: 3件</p>
+                    <p class="like">いいね: 20</p>
+                    <p class="comment">コメント: 3件</p>
                 </div>
                 <div class="column">
                     <h2>「これはサンプルタイトルです」</h2>
                     <p class="date">2017年3月26日17:00</p>
                     <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p><p class="comment">コメント: 3件</p>
+                    <p class="like">いいね: 20</p>
+                    <p class="comment">コメント: 3件</p>
                 </div>
+            </div>
+            <div id="timeline">
+                <section class="cd-horizontal-timeline">
+                    <div class="timeline">
+                        <div class="events-wrapper">
+                            <div class="events">
+                                <ol>
+                                    <li><a href="#0" data-date="01/01/2005" class="selected">2005</a></li>
+                                    <li><a href="#0" data-date="01/01/2007">2007</a></li>
+                                    <li><a href="#0" data-date="01/01/2008">2008</a></li>
+                                    <li><a href="#0" data-date="01/01/2011">2011</a></li>
+                                    <li><a href="#0" data-date="01/01/2012">2012</a></li>
+                                    <li><a href="#0" data-date="01/01/2013">2013</a></li>
+                                    <li><a href="#0" data-date="01/01/2014">2014</a></li>
+                                    <li><a href="#0" data-date="01/01/2015">2015</a></li>
+                                    <li><a href="#0" data-date="01/01/2016">2016</a></li>
+                                </ol>
+
+                                <span class="filling-line" aria-hidden="true"></span>
+                            </div>
+                            <!-- .events -->
+                        </div>
+                        <!-- .events-wrapper -->
+
+                        <ul class="cd-timeline-navigation">
+                            <li><a href="#0" class="prev inactive">Prev</a></li>
+                            <li><a href="#0" class="next">Next</a></li>
+                        </ul>
+                        <!-- .cd-timeline-navigation -->
+                    </div>
+                    <!-- .timeline -->
+
+                    <div class="events-content">
+                        <ol>
+                            <li class="selected" data-date="01/01/2005">
+                                <h2>Foundation of Calix</h2>
+                                <em>2005</em>
+                                <p>
+                                    Calix is founded.
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2007">
+                                <h2>Pilot</h2>
+                                <em>2007</em>
+                                <p>
+                                    First pilot calciner facility is built to test what was possible.
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2011">
+                                <h2>First Plant</h2>
+                                <em>2011</em>
+                                <p>
+                                    First continuous calciner plant CFC 850 at Bacchus Marsh.
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2012">
+                                <h2>Acquisition</h2>
+                                <em>2012</em>
+                                <p>
+                                    Acquisition of Myrtle Springs mining tenements.</p>
+                                <p>
+                                    Awarded UK Government’s DECC grant to develop the Endex technology.
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2013">
+                                <h2>World’s First</h2>
+                                <em>2013</em>
+                                <p>
+                                    World’s first 30kTpa commercial CFC demonstrator.</p>
+                                <p>
+                                    First plant in South East Asia established.
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2014">
+                                <h2>Awards</h2>
+                                <em>2014</em>
+                                <p>
+                                    First MHL manufactruring facilities established in both NSW and QLD.</p>
+                                <p>
+                                    Awarded Commercialisation Australia grant helps accelerating the roll-out of our proprietary MHS slurrying technology via transportable batching plants.</p>
+                                <p>
+                                    Calix wins the Water Category Awards at the 2014 Australian Technologies Competition.
+
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2015">
+                                <h2>More Wins</h2>
+                                <em>2015</em>
+                                <p>
+                                    Awarded Commercialisation Australia grant to support Booster-Mag commercialisation.</p>
+                                <p>
+                                    ABA100 Winner for Best Technology Product in The Australian Business Awards 2015.</p>
+                                <p>
+                                    Calix wins the Water Category Awards and is nominated Australia’s best emerging tech company of the year at the annual Australian Technologies Competition.
+
+                                </p>
+                            </li>
+
+                            <li data-date="01/01/2016">
+                                <h2>Major Funding</h2>
+                                <em>2016</em>
+                                <p>
+                                    LEILAC consortium secures €12 Million EU Funding to demonstrate technology to reduce carbon emissions from cement and lime industries.
+                                </p>
+                            </li>
+
+
+                        </ol>
+                    </div>
+                    <!-- .events-content -->
+                </section>
             </div>
         </div>
         <div id="sidebar">
