--- a/mypage.html
+++ b/mypage.html
@@ -153,6 +153,8 @@
                                     <li><a href="#0" data-date="01/01/2014">2014</a></li>
                                     <li><a href="#0" data-date="01/01/2015">2015</a></li>
                                     <li><a href="#0" data-date="01/01/2016">2016</a></li>
+                                    <li><a href="#0" data-date="01/01/2018">2018</a></li>
+                                    <li><a href="#0" data-date="01/01/2020">2020</a></li>
                                 </ol>
 
                                 <span class="filling-line" aria-hidden="true"></span>
