--- a/mypage.html
+++ b/mypage.html
@@ -36,44 +36,8 @@
                     <li><a href="service">Service</a></li>
                 </ul>
                 <div class="account_box">
-                    <a id="login" href="">Log in</a>
-                    <em>or</em>
-                    <a id="signup" href="">Sign up</a>
-                    <div id="modal-content">
-                        <div id="modal-content-innar">
-                            <ul>
-                                <li id="login-tab">Log in</li>
-                                <li id="signup-tab">Sign up</li>
-                            </ul>
-                            <div id="login-modal">
-                                <ul>
-                                    <li>
-                                        <input name="user_name" type="text" placeholder="ユーザーネーム">
-                                    </li>
-                                    <li>
-                                        <input name="password" type="password" placeholder="パスワード">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div id="signup-modal">
-                                <ul>
-                                    <li>
-                                        <input name="user_name" type="text" placeholder="ユーザーネーム">
-                                    </li>
-                                    <li>
-                                        <input name="mail" type="text" placeholder="メールアドレス">
-                                    </li>
-                                    <li>
-                                        <input name="password" type="password" placeholder="パスワード">
-                                    </li>
-                                    <li>
-                                        <input type="submit" value="登録">
-                                    </li>
-                                </ul>
-                            </div>
-                            <p id="modal-close" class="button-link">閉じる</p>
-                        </div>
-                    </div>
+                    <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" width="30" alt="">
+                    <p>北澤太地</p>
                 </div>
             </nav>
         </div>
