--- a/mypage.html
+++ b/mypage.html
@@ -35,10 +35,10 @@
                     <li><a href="idea.html">Idea</a></li>
                     <li><a href="service">Service</a></li>
                 </ul>
-                <div class="account_box">
+                <a href="/mypage.html" class="account_box">
                     <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" width="30" alt="">
                     <p>北澤太地</p>
-                </div>
+                </a>
             </nav>
         </div>
     </header>
