--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>Top</title>
+    <title>Top | Cancer Journey</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mediaquery.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -31,7 +31,7 @@
                     <li><a href="talk.html">Talk</a></li>
                     <li><a href="search.html">Search</a></li>
                     <li><a href="idea.html">Idea</a></li>
-                    <li><a href="service">Service</a></li>
+                    <li><a href="checklist.html">Checklist</a></li>
                 </ul>
                 <div class="account_box">
                     <a id="login" href="">Log in</a>
@@ -44,15 +44,12 @@
 
     <div id="main">
         <div class="container">
-            <div class="inside-box">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ybctSLzMpFs" frameborder="0" allowfullscreen></iframe>
+            <div class="about">
+                <h1>Cancer Journeyとは</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus officiis, ea! Inventore id enim ratione nisi nihil ipsum non, consectetur amet optio, laboriosam saepe numquam consequatur expedita totam error provident?</p>
             </div>
-            <div class="inside-box">
-                <h1>Cancer Journey</h1>
-                <div class="describe">
-                    <p>Cancer Journeyはがん患者とそのサポーターが登録できるプラットフォームです。</p>
-                    <p>まずはメニューの"Find Someone"から自分と同じがんを持った人がいるか探してみましょう。</p>
-                </div>
+            <div id="">
+                
             </div>
         </div>
     </div>
