--- a/mypage.html
+++ b/mypage.html
@@ -33,7 +33,7 @@
                     <li><a href="talk.html">Talk</a></li>
                     <li><a href="search.html">Search</a></li>
                     <li><a href="idea.html">Idea</a></li>
-                    <li><a href="service">Service</a></li>
+                    <li><a href="checklist.html">Checklist</a></li>
                 </ul>
                 <a href="/mypage.html" class="account_box">
                     <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" width="30" alt="">
@@ -108,7 +108,12 @@
                         <div class="events-wrapper">
                             <div class="events">
                                 <ol>
-                                    <li><a href="#0" data-date="01/01/2005" class="selected">2005</a></li>
+                                    <li><a href="#0" data-date="01/01/2000" class="selected">2000/01/01</a></li>
+                                    <li><a href="#0" data-date="01/06/2000">2000/06/01</a></li>
+                                    <li><a href="#0" data-date="01/04/2001">2001/04/01</a></li>
+                                    <li><a href="#0" data-date="01/04/2002">2002/04/01</a></li>
+                                    <li><a href="#0" data-date="01/12/2002">2002/12/01</a></li>
+                                    <li><a href="#0" data-date="01/01/2005">2005</a></li>
                                     <li><a href="#0" data-date="01/01/2007">2007</a></li>
                                     <li><a href="#0" data-date="01/01/2008">2008</a></li>
                                     <li><a href="#0" data-date="01/01/2011">2011</a></li>
