--- a/talk.html
+++ b/talk.html
@@ -33,7 +33,7 @@
                     <li><a class="active-button" href="talk.html">Talk</a></li>
                     <li><a href="search.html">Search</a></li>
                     <li><a href="idea.html">Idea</a></li>
-                    <li><a href="service">Service</a></li>
+                    <li><a href="checklist.html">Checklist</a></li>
                 </ul>
                 <div class="account_box">
                     <a id="login" href="">Log in</a>
@@ -242,7 +242,7 @@
                 </div>
                 <div id="login_form">
                     <p>すでにアカウントをお持ちの方:</p>
-                    <a href="">ログイン</a>
+                    <a href="mypage.html">ログイン</a>
                 </div>
             </div>
         </div>
