--- a/findsomeone.html
+++ b/findsomeone.html
@@ -45,6 +45,7 @@
                                 <li id="login-tab">Log in</li>
                                 <li id="signup-tab">Sign up</li>
                             </ul>
+                           <div id="modal-main">
                             <div id="login-modal">
                                 <ul>
                                     <li>
@@ -55,6 +56,23 @@
                                     </li>
                                 </ul>
                             </div>
+                            <div id="signup-modal">
+                                <ul>
+                                    <li>
+                                        <input name="user_name" type="text" placeholder="ユーザーネーム">
+                                    </li>
+                                    <li>
+                                        <input name="mail" type="text" placeholder="メールアドレス">
+                                    </li>
+                                    <li>
+                                        <input name="password" type="password" placeholder="パスワード">
+                                    </li>
+                                    <li>
+                                        <input type="submit" value="登録">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                             <div id="signup-modal">
                                 <ul>
                                     <li>
@@ -235,7 +253,7 @@
                 </div>
                 <div id="login_form">
                     <p>すでにアカウントをお持ちの方:</p>
-                    <a href="">ログイン</a>
+                    <a href="mypage.html">ログイン</a>
                 </div>
             </div>
         </div>
