--- a/mypage.html
+++ b/mypage.html
@@ -108,12 +108,12 @@
                         <div class="events-wrapper">
                             <div class="events">
                                 <ol>
-                                    <li><a href="#0" data-date="01/01/2000" class="selected">2000/01/01</a></li>
-                                    <li><a href="#0" data-date="01/06/2000">2000/06/01</a></li>
-                                    <li><a href="#0" data-date="01/04/2001">2001/04/01</a></li>
-                                    <li><a href="#0" data-date="01/04/2002">2002/04/01</a></li>
-                                    <li><a href="#0" data-date="01/12/2002">2002/12/01</a></li>
-                                    <li><a href="#0" data-date="01/01/2005">2005</a></li>
+                                    <li><a href="#0" data-date="01/01/2000" class="selected"><span>2000/01/01</span></a></li>
+                                    <li><a href="#0" data-date="01/06/2000"><span>2000/06/01</span></a></li>
+                                    <li><a href="#0" data-date="01/04/2001"><span>2001/04/01</span></a></li>
+                                    <li><a href="#0" data-date="01/04/2002"><span>2002/04/01</span></a></li>
+                                    <li><a href="#0" data-date="01/12/2002"><span>2002/12/01</span></a></li>
+                                    <li><a href="#0" data-date="01/01/2005"><span>2005/01/01</span></a></li>
                                     <li><a href="#0" data-date="01/01/2007">2007</a></li>
                                     <li><a href="#0" data-date="01/01/2008">2008</a></li>
                                     <li><a href="#0" data-date="01/01/2011">2011</a></li>
