--- a/mypage.html
+++ b/mypage.html
@@ -35,7 +35,7 @@
                     <li><a href="idea.html">Idea</a></li>
                     <li><a href="checklist.html">Checklist</a></li>
                 </ul>
-                <a href="/mypage.html" class="account_box">
+                <a href="mypage.html" class="account_box">
                     <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" width="30" alt="">
                     <p>北澤太地</p>
                 </a>
@@ -251,7 +251,7 @@
                 </div>
                 <div id="login_form">
                     <p>すでにアカウントをお持ちの方:</p>
-                    <a href="">ログイン</a>
+                    <a href="mypage.html">ログイン</a>
                 </div>
             </div>
         </div>
