--- a/checklist.html
+++ b/checklist.html
@@ -35,7 +35,7 @@
                     <li><a href="idea.html">Idea</a></li>
                     <li><a class="active-button" href="checklist.html">Checklist</a></li>
                 </ul>
-                <a href="/mypage.html" class="account_box">
+                <a href="mypage.html" class="account_box">
                     <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" width="30" alt="">
                     <p>北澤太地</p>
                 </a>
