--- a/mypage.html
+++ b/mypage.html
@@ -37,7 +37,7 @@
                 </ul>
                 <a href="mypage.html" class="account_box">
                     <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" width="30" alt="">
-                    <p>北澤太地</p>
+                    <p>奥村友香</p>
                 </a>
             </nav>
         </div>
@@ -49,21 +49,21 @@
             <div id="profile-top">
                 <div id="blur"></div>
                 <div id="filter">
-                    <img src="img/13584843_853446848120974_4897931407915144558_o.jpg" alt="">
-                    <h2>北澤太地</h2>
+                    <img src="img/PAK160130240I9A6753_TP_V.jpg" alt="">
+                    <h2>奥村友香</h2>
                 </div>
             </div>
             <div id="status">
                 <div id="textarea">
                     <br>
                     <br>
-                    <p>年齢: 40</p>
+                    <p>年齢: 31</p>
                     <br>
                     <br>
-                    <p>性別: 男性</p>
+                    <p>性別: 女性</p>
                     <br>
                     <br>
-                    <p>がんの種類: 大腸がん</p>
+                    <p>がんの種類: 子宮頸がん</p>
                     <br>
                     <br>
                     <p>地域: 東京</p>
@@ -108,22 +108,16 @@
                         <div class="events-wrapper">
                             <div class="events">
                                 <ol>
-                                    <li><a href="#0" data-date="01/01/2000" class="selected"><span>2000/01/01</span></a></li>
-                                    <li><a href="#0" data-date="01/06/2000"><span>2000/06/01</span></a></li>
-                                    <li><a href="#0" data-date="01/04/2001"><span>2001/04/01</span></a></li>
-                                    <li><a href="#0" data-date="01/04/2002"><span>2002/04/01</span></a></li>
-                                    <li><a href="#0" data-date="01/12/2002"><span>2002/12/01</span></a></li>
-                                    <li><a href="#0" data-date="01/01/2005"><span>2005/01/01</span></a></li>
-                                    <li><a href="#0" data-date="01/01/2007">2007</a></li>
-                                    <li><a href="#0" data-date="01/01/2008">2008</a></li>
-                                    <li><a href="#0" data-date="01/01/2011">2011</a></li>
-                                    <li><a href="#0" data-date="01/01/2012">2012</a></li>
-                                    <li><a href="#0" data-date="01/01/2013">2013</a></li>
-                                    <li><a href="#0" data-date="01/01/2014">2014</a></li>
-                                    <li><a href="#0" data-date="01/01/2015">2015</a></li>
-                                    <li><a href="#0" data-date="01/01/2016">2016</a></li>
-                                    <li><a href="#0" data-date="01/01/2018">2018</a></li>
-                                    <li><a href="#0" data-date="01/01/2020">2020</a></li>
+                                    <li><a href="#0" data-date="01/01/2003" class="selected"><span>2003年(22歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/10/2004"><span>2004年10月(23歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/11/2004"><span>2004年11月(23歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/04/2005"><span>2005年4月(24歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/05/2005"><span>2005年5月(24歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/06/2007"><span>2007年6月(26歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/07/2008"><span>2008年7月(26歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/06/2009"><span>2009年6月(28歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/08/2011"><span>2011年8月(30歳)</span></a></li>
+                                    <li><a href="#0" data-date="01/04/2012"><span>2012年4月(31歳)</span></a></li>
                                 </ol>
 
                                 <span class="filling-line" aria-hidden="true"></span>
@@ -142,84 +136,71 @@
 
                     <div class="events-content">
                         <ol>
-                            <li class="selected" data-date="01/01/2005">
-                                <h2>Foundation of Calix</h2>
-                                <em>2005</em>
+                            <li class="selected" data-date="01/01/2003">
+                                <h2>仕事、そして定期検診</h2>
+                                <em>2003</em>
                                 <p>
-                                    Calix is founded.
+                                    ベンチャーの不動産会社にて営業をしていた。 会社の健康診断で子宮頸がん検診を受けていた。
                                 </p>
                             </li>
 
-                            <li data-date="01/01/2007">
-                                <h2>Pilot</h2>
-                                <em>2007</em>
-                                <p>
-                                    First pilot calciner facility is built to test what was possible.
+                            <li data-date="01/10/2004">
+                                <h2>がんの宣告</h2>
+                                <em>2004年10月</em>
+                                <p>出血があり、精密検査を受けた。 ・がんの確定診断：ステージIIbの子宮頸がんの宣告を受けた。 仲が悪く、逃げるように上京した実家の母親に連絡し、相談。様々な情報を調べるが、でたらめな情報が多かったです。
                                 </p>
                             </li>
 
-                            <li data-date="01/01/2011">
-                                <h2>First Plant</h2>
-                                <em>2011</em>
-                                <p>
-                                    First continuous calciner plant CFC 850 at Bacchus Marsh.
+                            <li data-date="01/11/2004">
+                                <h2>治療方針</h2>
+                                <em>2004年11月</em>
+                                <p>治療方針決定のための追加検査の後に、治療方針決定 抗がん剤にてがんを縮小後、子宮広汎全摘出。摘出後は放射線治療。 の予定。 ＜心＞手術やその後の生活が怖くなって逃げ出し、母親に「とにかく帰るからひとりにして」というメールを送ったところ、「子宮を失うどうこうではなく、とにかく生きなさい。子どもが産めなくなってもそれはそれで生きていく道があると思います。」という長いメールが来ました。こうして母親との心の絆が強くなる中で覚悟が決まり、手術を決心しました。
                                 </p>
                             </li>
 
-                            <li data-date="01/01/2012">
-                                <h2>Acquisition</h2>
-                                <em>2012</em>
-                                <p>
-                                    Acquisition of Myrtle Springs mining tenements.</p>
-                                <p>
-                                    Awarded UK Government’s DECC grant to develop the Endex technology.
+                            <li data-date="01/04/2005">
+                                <h2>子宮広汎全摘出</h2>
+                                <em>2005年4月</em>
+                                <p>子宮広汎全摘出（卵巣は残して、子宮を摘出） 妊孕性（妊娠・出産能力）の温存を目的に、放射線治療で卵巣に放射線が当たらないようにするため、子宮全摘出の手術のときに、卵巣の位置を吊り上げました。
                                 </p>
                             </li>
 
-                            <li data-date="01/01/2013">
-                                <h2>World’s First</h2>
-                                <em>2013</em>
-                                <p>
-                                    World’s first 30kTpa commercial CFC demonstrator.</p>
-                                <p>
-                                    First plant in South East Asia established.
+                            <li data-date="01/05/2005">
+                                <h2>根治治療</h2>
+                                <em>2005年5月 ~ 2007年5月</em>
+                                <p>放射線治療を受けた。 がん生殖医療の目的であるQOLの維持のために、ホルモンバランスを維持する治療をした。 ＜仕事＞治療が終われば戻れると思っていましたが、治療が終わってみると営業ができるような体力がありませんでした。それに、髪の毛が無くなっていたこともあり営業には戻れませんでした。事務職に移る提案もありましたが、がんになる直前に輝いていた時期の自分が、体力が無くなり、髪の毛が無くなり、事務職になるということをその職場で見せることがどうしてもできず、辞めてしまいました。会社は待っていてくれたのですが、戻れませんでした。
                                 </p>
                             </li>
-
-                            <li data-date="01/01/2014">
-                                <h2>Awards</h2>
-                                <em>2014</em>
-                                <p>
-                                    First MHL manufactruring facilities established in both NSW and QLD.</p>
-                                <p>
-                                    Awarded Commercialisation Australia grant helps accelerating the roll-out of our proprietary MHS slurrying technology via transportable batching plants.</p>
-                                <p>
-                                    Calix wins the Water Category Awards at the 2014 Australian Technologies Competition.
-
+                            <li data-date="01/06/2007">
+                                <h2>経過観察</h2>
+                                <em>2007年6月</em>
+                                <p>リンパ浮腫の後遺症が生じた。 妊孕性に問題が生じた。 ＜仕事＞アルバイトでは東京ではやっていけず、大阪の実家に戻り、週３日のアルバイトを始めて徐々に増やしながら働いていました。
                                 </p>
                             </li>
-
-                            <li data-date="01/01/2015">
-                                <h2>More Wins</h2>
-                                <em>2015</em>
-                                <p>
-                                    Awarded Commercialisation Australia grant to support Booster-Mag commercialisation.</p>
-                                <p>
-                                    ABA100 Winner for Best Technology Product in The Australian Business Awards 2015.</p>
-                                <p>
-                                    Calix wins the Water Category Awards and is nominated Australia’s best emerging tech company of the year at the annual Australian Technologies Competition.
-
+                            <li data-date="01/07/2008">
+                                <h2>経過観察</h2>
+                                <em>2008年7月</em>
+                                <p>＜仕事＞もう一度東京で働きたかったので正社員の試験を受けました。面接では「健康ですよね？」という質問にはい、と嘘の返事をして採用されました。体力はアルバイトをした１年で普通に生活するくらいには戻っていましたが、足がむくむなどの後遺症はつらかったです。後遺症のことやがん治療のことは採用試験で言っていなかったので、忙しくなったときに後遺症で足がむくんで高熱が出ていました。上司に言ったところ、残業も休日出勤もしなくていいと言ってもらいましたが、事情を理解してもらうために社員全員にがんのこと、後遺症の事を伝えました。それでも忙しい時期に他の人と同じように無理をすると突然熱が出るので、一部の人から、みんなが忙しくなってきた時期にいつも休むという声があるということを聞き、自分の居場所を感じられなくなり、辞めてしまいました。その後も、がんや後遺症のことを隠しては就職し、周囲に迷惑をかけていると感じて退職する、という繰り返しでした。
                                 </p>
                             </li>
-
-                            <li data-date="01/01/2016">
-                                <h2>Major Funding</h2>
-                                <em>2016</em>
-                                <p>
-                                    LEILAC consortium secures €12 Million EU Funding to demonstrate technology to reduce carbon emissions from cement and lime industries.
+                            <li data-date="01/06/2009">
+                                <h2>講演活動の開始</h2>
+                                <em>2009年6月</em>
+                                <p>日本対がん協会で働きながら講演活動をし始め、これを機に人生が変わりました。協会では体調を優先した勤務ができるようになり、それに伴って後遺症が出る回数が減りました。しかし今でも忙しくなれば後遺症が出るので、自分で一生コントロールしていかなければいけません。 ＜心＞そういう体になったということを受け入れるのに時間がかかりました。私はこんなんじゃない、もっとやれるのにと思うのに、体がついてこないことがショックでした。 現在は講演などで「がんと言われても、仕事は辞めないで」と話しています。当時、がんと就労の問題について自分が少しでも知っていれば、また、会社の誰かに相談していれば違っていたかもしれません。
                                 </p>
                             </li>
-
+                            <li data-date="01/08/2011">
+                                <h2>生活の安定</h2>
+                                <em>2011年8月</em>
+                                <p>＜生活＞以前はお金が足りなかったが、30歳でやっと安定した収入、仕事ぶりを発揮できるようになりました。
+                                </p>
+                            </li>
+                            <li data-date="01/04/2012">
+                                <h2>挑戦</h2>
+                                <em>2012年4月</em>
+                                <p>＜生活＞自分へのチャレンジとして、諦めてしまっていたことをもう一度挑戦しました。今回は嘘偽りなく採用試験を受けましたが、ほとんどの会社は不採用。そんな中、ある建築会社が自分の体のことやこれまでの経験を活かせる方法を考えてくれ、営業職に就くことに。この会社は設計・施工管理の求人枠で応募しましたが、自分を活かす仕事を探してくれた結果だったので、この会社に惚れ込み、現在では後遺症とうまく付き合いながら仕事できています。
+                                </p>
+                            </li>
 
                         </ol>
                     </div>
