--- a/mypage.html
+++ b/mypage.html
@@ -74,32 +74,17 @@
             </div>
             <div id="columns">
                 <div class="column">
-                    <h2>「これはサンプルタイトルです」</h2>
-                    <p class="date">2017年3月26日17:00</p>
-                    <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
+                    <h2>「大きな決断」</h2>
+                    <p class="date">2010年5月15日12:00</p>
+                    <p class="column-content">治療から5年だった昨日、すごく大きな経験をしてきました。それは、講演活動です。他の女性たちに、私と同じような思いをして欲しくないという思いから、両親の反対を押し切って、思い切って講演を引き受け、、私にとってはとても大きな決断でした。 そして昨日、講演を終えてみて率直な感想は、、やってみて本当に良かった！終わっ後多くの方から励みになった、自分も頑張ろうと思った、との言葉を頂き、私の方が本当に大きなパワーを頂きました。がんになった私だからこそできることがある、そう感じられた1日、この経験は今後の私にとって、すごく大きなきっかけになりそう、そんな予感がしています。人の言葉の持つ力って、本当に偉大ですね。
+                    </p>
                     <p class="like">いいね: 20</p>
-                    <p class="comment">コメント: 3件</p>
                 </div>
                 <div class="column">
-                    <h2>「これはサンプルタイトルです」</h2>
-                    <p class="date">2017年3月26日17:00</p>
-                    <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p>
-                    <p class="comment">コメント: 3件</p>
-                </div>
-                <div class="column">
-                    <h2>「これはサンプルタイトルです」</h2>
-                    <p class="date">2017年3月26日17:00</p>
-                    <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p>
-                    <p class="comment">コメント: 3件</p>
-                </div>
-                <div class="column">
-                    <h2>「これはサンプルタイトルです」</h2>
-                    <p class="date">2017年3月26日17:00</p>
-                    <p class="column-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, cum. Praesentium impedit ab est harum, quisquam nesciunt labore beatae alias doloribus voluptatum facilis dolore quia iure enim fuga consequuntur vel?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptate facilis consequuntur officiis fugiat, esse et, ipsum laboriosam quos cupiditate suscipit porro aliquid quis quisquam velit? Maxime, vel nam ratione.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur beatae, voluptatibus, eveniet excepturi, nam illum assumenda nisi eligendi delectus numquam repellendus praesentium odio alias! Debitis amet tempore beatae ex. Nemo!</p>
-                    <p class="like">いいね: 20</p>
-                    <p class="comment">コメント: 3件</p>
+                    <h2>「母という大きな存在」</h2>
+                    <p class="date">2005年6月23日14:00</p>
+                    <p class="column-content">上京してからあまり連絡を取っていなかった母親。がんになったことを連絡したら、とても親身に聞いてくれた。今まで母親想いでなかったことを改めて悔やまれて涙が出てきた。母の言葉がなかったら手術を決めなかったので、その存在の大きさを痛感した。</p>
+                    <p class="like">いいね: 30</p>
                 </div>
             </div>
             <div id="timeline">
