--- a/mypage.html
+++ b/mypage.html
@@ -74,6 +74,13 @@
             </div>
             <div id="columns">
                 <div class="column">
+                    <h2>「ふたたび。」</h2>
+                    <p class="date">2012年4月5日 13:00</p>
+                    <p class="column-content">長年の夢だった建築会社の面接に、ついにパスしました！ がんの経験と後遺症を持っている私に対して、チャレンジしたいという私の要望を聞いてくれ、自分の経験を活かせる仕事を模索してくれたこの会社に惚れ惚れ。とても感謝しています。
+                    </p>
+                    <p class="line">いいね: 40</p>
+                </div>
+                <div class="column">
                     <h2>「大きな決断」</h2>
                     <p class="date">2010年5月15日12:00</p>
                     <p class="column-content">治療から5年だった昨日、すごく大きな経験をしてきました。それは、講演活動です。他の女性たちに、私と同じような思いをして欲しくないという思いから、両親の反対を押し切って、思い切って講演を引き受け、、私にとってはとても大きな決断でした。 そして昨日、講演を終えてみて率直な感想は、、やってみて本当に良かった！終わっ後多くの方から励みになった、自分も頑張ろうと思った、との言葉を頂き、私の方が本当に大きなパワーを頂きました。がんになった私だからこそできることがある、そう感じられた1日、この経験は今後の私にとって、すごく大きなきっかけになりそう、そんな予感がしています。人の言葉の持つ力って、本当に偉大ですね。
